Update tmux config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,23 @@
 # Tmux configuration file
 
+# Add mouse support
+set -g mouse on
 # Set the default terminal terminfo
 set -g default-terminal "tmux-256color"
 # True colour support
 set -as terminal-overrides ",xterm*:Tc"
+# Automatically renumber windows
+set -g renumber-windows on
+# Swap windows using > and <
+bind -r "<" swap-window -d -t -1
+bind -r ">" swap-window -d -t +1
+# New binds for panes creation
+# # Vertical split
+bind-key "|" split-window -h -c "#{pane_current_path}"
+bind-key "\\" split-window -fh -c "#{pane_current_path}"
+# # Horizontal split
+bind-key "-" split-window -v -c "#{pane_current_path}"
+bind-key "_" split-window -fv -c "#{pane_current_path}"
+
+# Command <prefix>+r reloads this configuration file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
