--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,12 +12,18 @@ set -g renumber-windows on
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
 # New binds for panes creation
-# # Vertical split
+# Vertical split
 bind-key "|" split-window -h -c "#{pane_current_path}"
 bind-key "\\" split-window -fh -c "#{pane_current_path}"
-# # Horizontal split
+# Horizontal split
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
+# Unbind old keys
+unbind '"'
+unbind %
 
 # Command <prefix>+r reloads this configuration file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Enable vi mode
+set-window-option -g mode-keys vi
