--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,9 +20,6 @@ bind-key "\\" split-window -fh -c "#{pane_current_path}"
 # Horizontal split
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
-# Unbind old keys
-unbind '"'
-unbind %
 
 # Start indexing from 1
 set -g base-index 1
@@ -84,7 +81,8 @@ set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour246,nobold,noitalics,nounderscore]#[bg=colour246,fg=colour237] #h "
+set-option -g status-right "#[bg=colour237,fg=colour246] #(pomo) #[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour246,nobold,noitalics,nounderscore]#[bg=colour246,fg=colour237] #h "
+set-option -g staus-interval 1
 
 set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
