[feat]: add other positions to $PATH and fix pomo (tmux)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ bind R source-file ~/.tmux.conf \; display-message "Config successfully reloaded
 # Enable vi mode
 set-window-option -g mode-keys vi
 
+# Update every 1 s
+set -g status-interval 1
+
 # --------------------- Customization - graphical -----------------------------
 
 # # Position of status line: bottom
@@ -82,7 +85,6 @@ set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
 set-option -g status-right "#[bg=colour237,fg=colour246] #(pomo) #[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour246,nobold,noitalics,nounderscore]#[bg=colour246,fg=colour237] #h "
-set-option -g staus-interval 1
 
 set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
