[feat]: add hjkl to navigate splits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,12 @@ bind-key "\\" split-window -fh -c "#{pane_current_path}"
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 
+# hjkl to navigate splits
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # Start indexing from 1
 set -g base-index 1
 
