[bug]: can't seem to use XDG_CONFIG_HOME

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,7 +31,7 @@ bind-key l select-pane -R
 set -g base-index 1
 
 # Command <prefix>+R reloads this configuration file
-bind R source-file ~/.tmux.conf \; display-message "Config successfully reloaded!"
+bind R source-file $HOME/.config/tmux/tmux.conf \; display-message "Config successfully reloaded!"
 
 # Enable vi mode
 set-window-option -g mode-keys vi
