[feat]: resize panes with hjkl

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,12 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# hjkl to resize splits
+bind-key -n C-j resize-pane -D 5
+bind-key -n C-k resize-pane -U 5
+bind-key -n C-l resize-pane -R 5
+bind-key -n C-h resize-pane -L 5
+
 # Start indexing from 1
 set -g base-index 1
 
