[fix]: allow for pressing prefix only once when resizing panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,10 +28,10 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # hjkl to resize splits
-bind-key -n -T prefix C-j resize-pane -D 5
-bind-key -n -T prefix C-k resize-pane -U 5
-bind-key -n -T prefix C-l resize-pane -R 5
-bind-key -n -T prefix C-h resize-pane -L 5
+bind-key -r -T prefix C-j resize-pane -D 5
+bind-key -r -T prefix C-k resize-pane -U 5
+bind-key -r -T prefix C-l resize-pane -R 5
+bind-key -r -T prefix C-h resize-pane -L 5
 
 # Start indexing from 1
 set -g base-index 1
