[feat]: add Vim shortcuts to copying text in visual mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,11 +36,15 @@ bind-key -r -T prefix C-h resize-pane -L 5
 # Start indexing from 1
 set -g base-index 1
 
-# Command <prefix>+R reloads this configuration file
-bind R source-file $HOME/.config/tmux/tmux.conf \; display-message "Config successfully reloaded!"
-
 # Enable vi mode
 set-window-option -g mode-keys vi
+
+# Enable "v" to start copy mode and "y" to copy selection
+bind-key -T copy-mode-vi "v" send -X begin-selection
+bind-key -T copy-mode-vi "y" send -X copy-selection
+
+# Command <prefix>+R reloads this configuration file
+bind R source-file $HOME/.config/tmux/tmux.conf \; display-message "Config successfully reloaded!"
 
 # Update every 1 s
 set -g status-interval 1
