--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,7 +100,7 @@ set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[bg=#7c6f64,fg=#282828] #S #[bg=#3c3836,fg=#7c6f64,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=#3c3836,fg=colour246] #(pomo) #[bg=#3c3836,fg=#504945 nobold, nounderscore, noitalics]#[bg=#504945,fg=#7c6f64] %Y-%m-%d  %H:%M #[bg=#504945,fg=#a89984,nobold,noitalics,nounderscore]#[bg=#a89984,fg=#282828] #h "
+set-option -g status-right "#[bg=#3c3836,fg=#7c6f64] #(pomo) #[bg=#3c3836,fg=#504945 nobold, nounderscore, noitalics]#[bg=#504945,fg=#7c6f64] %Y-%m-%d  %H:%M #[bg=#504945,fg=#a89984,nobold,noitalics,nounderscore]#[bg=#a89984,fg=#282828] #h "
 
 set-window-option -g window-status-current-format "#[bg=colour214,fg=#3c3836,nobold,noitalics,nounderscore]#[bg=colour214,fg=#3c3836] #I #[bg=colour214,fg=#3c3836,bold] #W#{?window_zoomed_flag,*Z,} #[bg=#3c3836,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=#504945,fg=#3c3836,noitalics]#[bg=#504945,fg=colour223] #I #[bg=#504945,fg=colour223] #W #[bg=#3c3836,fg=#504945,noitalics]"
