[feat]: add lualine custom theme and solve minor issues

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -105,4 +105,4 @@ set-option -g status-right "#[bg=#3c3836,fg=#7c6f64] #(pomo) #[bg=#3c3836,fg=#50
 set-window-option -g window-status-current-format "#[bg=colour214,fg=#3c3836,nobold,noitalics,nounderscore]#[bg=colour214,fg=#3c3836] #I #[bg=colour214,fg=#3c3836,bold] #W#{?window_zoomed_flag,*Z,} #[bg=#3c3836,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=#504945,fg=#3c3836,noitalics]#[bg=#504945,fg=colour223] #I #[bg=#504945,fg=colour223] #W #[bg=#3c3836,fg=#504945,noitalics]"
 
-# vim: set ft=tmux tw=0 nowrap:
+# vim: set ft=tmux tw=0 wrap:
