--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,6 +56,9 @@ set -g status-interval 1
 # # Set color
 # set-option -g status-style bg=magenta,fg=black
 
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 ## COLORSCHEME: gruvbox dark (medium)
 set-option -g status "on"
 
