fix: copy-paste in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,10 +38,15 @@ set -g base-index 1
 
 # Enable vi mode
 set-window-option -g mode-keys vi
+set -g set-clipboard on
 
 # Enable "v" to start copy mode and "y" to copy selection
 bind-key -T copy-mode-vi "v" send -X begin-selection
-bind-key -T copy-mode-vi "y" send -X copy-selection
+if-shell '[[ $(uname -s) = Linux ]]' { 
+   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard" 
+} { 
+   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" 
+}
 
 # Command <prefix>+R reloads this configuration file
 bind R source-file $HOME/.config/tmux/tmux.conf \; display-message "Config successfully reloaded!"
