--- a/nvim/my_snippets/package.json
+++ b/nvim/my_snippets/package.json
@@ -12,6 +12,10 @@
       {
         "language": "python",
         "path": "./snippets/python.json"
+      },
+      {
+        "language": "arduino",
+        "path": "./snippets/arduino.json"
       }
     ]
   }
