--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	email = dav.macario@gmail.com
 [core]
 	compression = 0
-	excludesfile = /Users/dmacario/.gitignore
+    excludesfile = /home/dmacario/.gitignore
 	editor = nvim
 [http]
 	postBuffer = 1048576000
@@ -18,3 +18,6 @@
     lg1-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)'
     lg2-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
     lg3-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset) %C(bold cyan)(committed: %cD)%C(reset) %C(auto)%d%C(reset)%n''          %C(white)%s%C(reset)%n''          %C(dim white)- %an <%ae> %C(reset) %C(dim white)(committer: %cn <%ce>)%C(reset)'
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
