feat: increase tmux scrollback
(cherry picked from commit fefc638d03bb4c2fae5a78545c451d2d8372fec3)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,10 +42,10 @@ set -g set-clipboard on
 
 # Enable "v" to start copy mode and "y" to copy selection
 bind-key -T copy-mode-vi "v" send -X begin-selection
-if-shell '[[ $(uname -s) = Linux ]]' { 
-   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard" 
-} { 
-   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" 
+if-shell '[[ $(uname -s) = Linux ]]' {
+   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+} {
+   bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy"
 }
 
 # Command <prefix>+R reloads this configuration file
@@ -53,6 +53,9 @@ bind R source-file $HOME/.config/tmux/tmux.conf \; display-message "Config succe
 
 # Update every 1 s
 set -g status-interval 1
+
+# Set scrollback to 10000 lines
+set -g history-limit 10000
 
 # --------------------- Customization - graphical -----------------------------
 
