feat: add header snippet for markdown
(cherry picked from commit f240230f4204f05c4b33746c7441775b49e6991c)

--- a/nvim/my_snippets/package.json
+++ b/nvim/my_snippets/package.json
@@ -16,6 +16,10 @@
       {
         "language": "arduino",
         "path": "./snippets/arduino.json"
+      },
+      {
+        "language": ["markdown", ".md", ".mdx"],
+        "path": "./snippets/markdown.json"
       }
     ]
   }
