--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,6 +36,11 @@ bind-key -r -T prefix C-h resize-pane -L 5
 # Start indexing from 1
 set -g base-index 1
 
+# Correctly display images in terminal
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # Enable vi mode
 set-window-option -g mode-keys vi
 set -g set-clipboard on
