style: colorscheme fixes
(cherry picked from commit fd2a9397f55c60608f17b0773152e523418810c6)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,13 +71,13 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set-option -g status "on"
 
 # default statusbar color
-set-option -g status-style bg="#3c3836",fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style bg="#3c3836",fg=#ffd7af # bg=bg1, fg=fg1
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg="#3c3836" # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=#ffaf00,fg="#3c3836" # bg=yellow, fg=bg1
 
 # default window with an activity alert
-set-window-option -g window-status-activity-style bg="#3c3836",fg=colour248 # bg=bg1, fg=fg3
+set-window-option -g window-status-activity-style bg="#3c3836",fg=#a8a8a8 # bg=bg1, fg=fg3
 
 # active window title colors
 set-window-option -g window-status-current-style bg=red,fg="#3c3836" # fg=bg1
@@ -87,20 +87,20 @@ set-option -g pane-active-border-style fg="#a89984" #fg2
 set-option -g pane-border-style fg="#3c3836" #bg1
 
 # message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+set-option -g message-style bg=#4e4e4e,fg=#ffd7af # bg=bg2, fg=fg1
 
 # writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+set-option -g message-command-style bg=#4e4e4e,fg=#ffd7af # bg=fg3, fg=bg1
 
 # pane number display
-set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-active-colour #bcbcbc #fg2
 set-option -g display-panes-colour "#3c3836" #bg1
 
 # clock
-set-window-option -g clock-mode-colour colour109 #blue
+set-window-option -g clock-mode-colour #87afaf #blue
 
 # bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+set-window-option -g window-status-bell-style bg=#d75f5f,fg=#262626 # bg=red, fg=bg
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
@@ -110,10 +110,10 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[bg=#7c6f64,fg=colour223,bold] #S #[bg=#3c3836,fg=#7c6f64,nobold,noitalics,nounderscore]"
+set-option -g status-left "#[bg=#7c6f64,fg=#ffd7af,bold] #S #[bg=#3c3836,fg=#7c6f64,nobold,noitalics,nounderscore]"
 set-option -g status-right "#[bg=#3c3836,fg=#7c6f64] #(pomo) #[bg=#3c3836,fg=#504945 nobold, nounderscore, noitalics]#[bg=#504945,fg=#7c6f64] %Y-%m-%d  %H:%M #[bg=#504945,fg=#a89984,nobold,noitalics,nounderscore]#[bg=#a89984,fg=#282828] #h "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=#3c3836,nobold,noitalics,nounderscore]#[bg=colour214,fg=#3c3836] #I #[bg=colour214,fg=#3c3836,bold] #W#{?window_zoomed_flag,*Z,} #[bg=#3c3836,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=#504945,fg=#3c3836,noitalics]#[bg=#504945,fg=colour223] #I #[bg=#504945,fg=colour223] #W #[bg=#3c3836,fg=#504945,noitalics]"
+set-window-option -g window-status-current-format "#[bg=#ffaf00,fg=#3c3836,nobold,noitalics,nounderscore]#[bg=#ffaf00,fg=#3c3836] #I #[bg=#ffaf00,fg=#3c3836,bold] #W#{?window_zoomed_flag,*Z,} #[bg=#3c3836,fg=#ffaf00,nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[bg=#504945,fg=#3c3836,noitalics]#[bg=#504945,fg=#ffd7af] #I #[bg=#504945,fg=#ffd7af] #W #[bg=#3c3836,fg=#504945,noitalics]"
 
 # vim: set ft=tmux tw=0 wrap:
