--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -117,3 +117,15 @@ set-window-option -g window-status-current-format "#[bg="#ffaf00",fg="#3c3836",n
 set-window-option -g window-status-format "#[bg="#504945",fg="#3c3836",noitalics]#[bg="#504945",fg="#ffd7af"] #I #[bg="#504945",fg="#ffd7af"] #W #[bg="#3c3836",fg="#504945",noitalics]"
 
 # vim: set ft=tmux tw=0 wrap:
+
+# -----------------------------------------------------------------------------
+# Tmux plugins (TPM)
+# -----------------------------------------------------------------------------
+
+# NOTE: prefix + I fetches plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Keep this at the bottom:
+run '~/.tmux/plugins/tpm/tpm'
