fix: improvements - zshrc, gitconfig
Path env var order, minor config settings

(cherry picked from commit 60f2ac5a5f6b83738592566a5f884291a90b5234)

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,3 +26,9 @@
     path=vitestro.gitconfig
 [includeIf "gitdir/i:/home/dmacario/github/"]
     path=personal.gitconfig
+[difftool]
+    prompt = true
+[diff]
+    tool = nvimdiff
+[difftool "nvimdiff"]
+    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
