--- a/.gitconfig
+++ b/.gitconfig
@@ -24,6 +24,8 @@
     lg3-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset) %C(bold cyan)(committed: %cD)%C(reset) %C(auto)%d%C(reset)%n''          %C(white)%s%C(reset)%n''          %C(dim white)- %an <%ae> %C(reset) %C(dim white)(committer: %cn <%ce>)%C(reset)'
 [includeIf "gitdir/i:/home/dmacario/src/"]
     path=vitestro.gitconfig
+[includeIf "gitdir/i:/home/dmacario/gitlab/"]
+    path=vitestro.gitconfig
 [includeIf "gitdir/i:/home/dmacario/github/"]
     path=personal.gitconfig
 [difftool]
