--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #!/bin/bash
 
 export NVIM_VERSION="v0.11.0"
+export NVIM_CMAKE_BUILD_TYPE="RelWithDebInfo"
 export DEBIAN_FRONTEND="noninteractive"
 export GHDIR="$HOME/github"
