--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+HOME="${1:-$HOME}"
+
 export NVIM_VERSION="v0.11.0"
 export NVIM_CMAKE_BUILD_TYPE="RelWithDebInfo"
 export DEBIAN_FRONTEND="noninteractive"
