--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ export NVIM_VERSION="v0.11.0"
 export NVIM_CMAKE_BUILD_TYPE="RelWithDebInfo"
 export DEBIAN_FRONTEND="noninteractive"
 export GHDIR="$HOME/github"
+export XDG_CONFIG_HOME="$HOME/.config"
