--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
       "USERNAME": "${localEnv:USER}"
     }
   },
+  "runArgs": ["--name", "dmacario_dotfiles"],
   "features": {
     // Add here necessary features - e.g., "ghcr.io/devcontainers/features/go:1" {"version": "1.21"}
     "ghcr.io/devcontainers/features/common-utils": {
