fix(gitconfig): untracked files setting in git status
(cherry picked from commit caddeaf9c3256bebf3a0db62df04269eaf581400)

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
 [status]
     branch = true
     showStash = true
-    showUntrackedFiles = true
+    showUntrackedFiles = all
 [diff]
     renames = copies
     interHunkContext = 10
