--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
 [status]
     branch = true
     showStash = true
-    showUntrackedFiles = true
+    showUntrackedFiles = all
 [diff]
     renames = copies
     interHunkContext = 10
